--- a/simplewatch.html
+++ b/simplewatch.html
@@ -36,8 +36,8 @@
 
   const config = {
     credential: {
-      serviceId: '발급 받은 Service Id를 입력',
-      key: '발급 받은 Service Key를 입력'
+      serviceId: '421462fb-71f8-43db-98a7-df0c7f392ed9',
+      key: 'dcf99e57fe0e44c11c1e7ed06367098446c79917547680c5cd9f0d02006a6bac'
     },
     view: {
       remote: '#remoteVideo'
